<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="edu.sjsu.yduan.foodie.FacebookLoginActivity"
android:id="@+id/facebook_login_activity"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/grey_100"
android:orientation="vertical"
android:weightSum="4">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/usr_icon"
        style="@style/ThemeOverlay.FirebaseIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_firebase_lockup"
        android:src="@drawable/ic_fb_large"
        android:visibility="visible" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:text="@string/facebook_title_text"
        android:theme="@style/ThemeOverlay.MyTitleText" />

    <TextView
        android:id="@+id/status"
        style="@style/ThemeOverlay.MyTextDetail"
        android:text="@string/signed_out" />

    <TextView
        android:id="@+id/detail"
        style="@style/ThemeOverlay.MyTextDetail"
        tools:text="Facebook User ID: N/A" />

    <TextView
        android:id="@+id/email"
        style="@style/ThemeOverlay.MyTextDetail"
        android:text="" />

</LinearLayout>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@color/grey_300">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/button_facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/button_facebook_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:visibility="gone"/>

</RelativeLayout>

</LinearLayout>