<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding4dp"
    tools:context="edu.sjsu.yduan.foodie.FriendDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="false"
            android:contentDescription="@string/img"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_marginLeft="@dimen/padding4dp"
            android:layout_marginTop="@dimen/padding4dp"
            android:layout_toRightOf="@+id/profile"
            android:text="@string/n_a"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/biz_fav"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/padding4dp"
            android:src="@drawable/ic_fav_gray" />
    </RelativeLayout>

    <TextView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/preference"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <edu.sjsu.yduan.foodie.FlowLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/preference_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:childSpacing="4dp"
        app:childSpacingForLastRow="align"
        app:flow="true"
        app:rowSpacing="4dp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>

