<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding4dp"
    tools:context="edu.sjsu.yduan.foodie.NewPreferenceActivity">

    <TextView
        android:id="@+id/desc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newpref"
        android:layout_centerHorizontal="true"
        android:text="@string/descript_the_preferencence_in_a_few_words"
        android:textColor="@color/light_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding16dp"
        android:text="@string/textview"
        android:textColor="@color/light_text"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="choose how much you prefer from 1 to 10" />

    <EditText
        android:id="@+id/newpref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/desc2"
        android:layout_alignEnd="@+id/ratingBar"
        android:layout_alignLeft="@+id/ratingBar"
        android:layout_alignRight="@+id/ratingBar"
        android:layout_alignStart="@+id/ratingBar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@color/verylight_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/donebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="onClick"
        android:text="@string/done"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="2.5"
        android:stepSize="0.5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
