<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/grey_100">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/price_left_margin">

        <ImageView
            android:id="@+id/biz_detail_review_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/ic_person_white" />

        <TextView
            android:id="@+id/biz_detail_review_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/biz_detail_review_img"
            android:layout_toRightOf="@+id/biz_detail_review_img"
            android:text="@string/app_name"
            android:textColor="@color/verylight_text"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap"
            tools:text="@string/n_a" />

        <TextView
            android:id="@+id/biz_detail_review_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/padding8dp"
            android:layout_toEndOf="@+id/biz_detail_review_name"
            android:layout_toRightOf="@+id/biz_detail_review_name"
            android:text="@string/n_a"
            android:textColor="@color/verylight_text"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/biz_detail_review_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/biz_detail_review_name"
            android:layout_toEndOf="@+id/biz_detail_review_img"
            android:layout_toRightOf="@+id/biz_detail_review_img"
            android:text="@string/n_a"
            android:textColor="@color/light_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/biz_detail_review_rating"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/round_rate"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>
</android.support.v7.widget.CardView>