<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:padding="@dimen/price_left_margin"
    tools:context="edu.sjsu.yduan.foodie.RestaurantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/biz_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:lines="1"
            android:text="@string/n_a"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/biz_fav"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            app:srcCompat="@drawable/ic_fav_gray" />

    </LinearLayout>

    <TextView
        android:id="@+id/biz_detail_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/ic_map_location"
        android:drawableStart="@drawable/ic_map_location"
        android:gravity="start|center_vertical"
        android:lines="1"
        android:onClick="onClick"
        android:text="@string/n_a"
        android:textAlignment="gravity"
        android:textColor="@color/light_text"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/biz_detail_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableStart="@drawable/ic_phone"
            android:gravity="start|center_vertical"
            android:lines="1"
            android:onClick="onClick"
            android:text="@string/n_a"
            android:textAlignment="gravity"
            android:textColor="@color/light_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/biz_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padding8dp"
            android:layout_marginRight="@dimen/padding8dp"
            android:layout_toLeftOf="@+id/biz_detail_distance"
            android:layout_toStartOf="@+id/biz_detail_distance"
            android:text="@string/money_label"
            android:textColor="@color/gold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/biz_detail_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/cardview_default_radius"
            android:layout_marginRight="@dimen/cardview_default_radius"
            android:layout_toLeftOf="@+id/biz_detail_miles"
            android:layout_toStartOf="@+id/biz_detail_miles"
            android:text="@string/n_a" />

        <TextView
            android:id="@+id/biz_detail_miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padding4dp"
            android:layout_marginRight="@dimen/padding4dp"
            android:layout_toLeftOf="@+id/biz_detail_yelp_icon"
            android:layout_toStartOf="@+id/biz_detail_yelp_icon"
            android:text="@string/miles" />

        <ImageView
            android:id="@+id/biz_detail_yelp_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_marginEnd="@dimen/padding4dp"
            android:layout_marginRight="@dimen/padding4dp"
            android:layout_toLeftOf="@+id/biz_detail_facebook_icon"
            android:layout_toStartOf="@+id/biz_detail_facebook_icon"
            android:contentDescription="@string/img"
            android:onClick="onClick"
            app:srcCompat="@drawable/yelp" />

        <ImageView
            android:id="@+id/biz_detail_facebook_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/img"
            android:onClick="onClick"
            app:srcCompat="@drawable/facebook" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/biz_detail_img1"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/img"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/biz_detail_img2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_toEndOf="@+id/biz_detail_img1"
            android:layout_toRightOf="@+id/biz_detail_img1"
            android:contentDescription="@string/img"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/biz_detail_img3"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_toEndOf="@+id/biz_detail_img2"
            android:layout_toRightOf="@+id/biz_detail_img2"
            android:contentDescription="@string/img"
            app:srcCompat="@mipmap/ic_launcher" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/biz_detail_like_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/price_left_margin"
        android:orientation="horizontal">

        <com.facebook.share.widget.LikeView
            android:id="@+id/like_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.facebook.share.widget.LikeView>

        <com.facebook.share.widget.ShareButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/price_left_margin"
        android:text="@string/reviews_title"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/biz_review_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
